force-app/main/default/objects/TTS_Space_Tenant_Contact__c/TTS_Space_Tenant_Contact__c.object-meta.xml
<CustomObject>
    <description>Associates an individual contact with a space tenant and records whether and when that contact is active or primary.</description>
    <label>Tenant Contact</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Tenant Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenant Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>