force-app/main/default/objects/TTS_Space_Tenant_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the individual associated with the space tenant.</description>
    <inlineHelpText>Select the contact associated with this tenant.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tenant Contacts</relationshipLabel>
    <relationshipName>Tenant_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>