force-app/main/default/objects/TTS_Space_Tenant_Contact__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Records the date when the contact's association with the tenant ends or ended.</description>
    <inlineHelpText>Enter the final date of this contact's association, or leave blank if it is ongoing.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>