force-app/main/default/objects/TTS_Space_Tenant_Contact__c/fields/Is_Current_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the contact is currently active for the tenant.</description>
    <inlineHelpText>Select this when the contact currently represents the tenant; clear it when the contact is no longer current.</inlineHelpText>
    <label>Is Current Contact</label>
    <type>Checkbox</type>
</CustomField>