force-app/main/default/objects/TTS_Space_Tenant_Contact__c/fields/Is_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this individual is the tenant's primary contact.</description>
    <inlineHelpText>Select this when the individual is the tenant's main contact.</inlineHelpText>
    <label>Is Primary Contact</label>
    <type>Checkbox</type>
</CustomField>