force-app/main/default/objects/TTS_Space_Tenant_Contact__c/fields/Space_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Space_Tenant__c</fullName>
    <description>Associates the contact record with its parent space tenant.</description>
    <inlineHelpText>Select the tenant with which this contact is associated.</inlineHelpText>
    <label>Space Tenant</label>
    <referenceTo>TTS_Space_Tenant__c</referenceTo>
    <relationshipLabel>Tenant Contacts</relationshipLabel>
    <relationshipName>Tenant_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>