force-app/main/default/objects/TTS_Space_Tenant_Contact__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Records the date from which the contact is associated with the tenant.</description>
    <inlineHelpText>Enter the first date of this contact's association; new records default to today.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>